--- a/css/style.css
+++ b/css/style.css
@@ -28,28 +28,48 @@
 /********GLOBAL***********/
 
 body {
-	background: url(../images/weave2.jpg);
-	padding: 10px 0;
+	background: #f9f9f9; /*#3d3d3d;*/
+	padding: ;
 }
 
 p {
 	font-family: "Inconsolata", serif;
 	font-size: 16px;
 	line-height: 1.5em;
+	padding: 5px 0px;
 }
 
 h1 {
 	font-family: "Special Elite", serif;
+	color: #FFF;
+	margin: 20px 0px;
 }
 
-h2, h3, h4, h5, table, form {
+h2, h3, h4, h5 {
+	font-family: "Inconsolata", serif;
+	padding: 5px 0px;
+} 
+
+table, form {
 	font-family: "Inconsolata", serif;
 }
+
+section {
+		padding: 20px;
+		margin: 20px 0px;
+		background: white;
+	}
+
+iframe {
+	display: block;
+}	
 
 footer {
 	font-family: "Special Elite", serif;
 	font-size: 12px;
 	text-align: right;
+	display: block;
+	clear: both;
 }
 
 .wrapper{
@@ -59,6 +79,7 @@ footer {
 
 .italics {
 	font-style: italic;
+	color: white;
 }
 
 /* For centering images */ 
@@ -67,25 +88,36 @@ footer {
 	text-align: center;
 }
 
+
 /* Index Page Logo */
+
+/* OLD LOGO
 
 #logo {
 	width: 55%;
 	height: 80px;
-	background-image: url(../images/wood.jpg);
- 	padding: 20px 20px 20px 20px;
+	background-image: url(../images/wood2.jpg);
+ 	padding: -5px 20px -5px 20px;
 	margin: 20px auto;
 	border-radius: 25px; 
-	border: 1px solid #FFF;
-}
+	border: 1px solid #FFF; 
+}*/
+
+#logo {
+ 	padding: 20px 0px;
+ 	background: #282828; url(../images/weave2.jpg);
+ 	margin: 0px auto 10px;
+ 	border-bottom: 6px solid black;
+ 	display: block;
+}	 
 
 #logo h1, h4 {
 	font-family: "Special Elite", serif; 
-	color: #FFF;
+	color: white;
 	text-align: center;
 	text-shadow: 0 2px 3px #000;
-	line-height: 26px
-
+	line-height: 16px;
+	clear: both;
 }
 
 /* Nav bar formatting */
@@ -93,8 +125,23 @@ footer {
 	font-family: "Inconsolata", serif;
 	text-transform: uppercase; 
 	color: #FFF;
+	background: black;
+	padding-bottom: 8px
 }
 
+#border {
+	/*border-left: 20px solid black;
+	border-right: 20px solid black;
+	border-top: 8px solid black;*/
+	border: 20px solid transparent;
+  border-image: url(../images/woody2.jpg);
+  border-image-slice: 28; 
+	border-image-width: 20px; 
+	border-image-outset: 0; 
+	border-image-repeat: round; */
+
+ 
+}
 a:link, :visited {
 	color: #FFF;
 	text-decoration: none;
@@ -109,6 +156,85 @@ a:active {/* selects links while mouse is depressed */
 	color: #BF5FFF;
 }
 
+table {
+	width: 100%;
+	margin: 0 0 20px;
+	border-top: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+}
+
+tr {
+	background: #efefef; 
+}
+
+th, td {
+	padding: 10px;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
+th {
+	background: #555;
+	color: white;
+}
+
+input, textarea {
+	display: block;
+	width: 100%;
+	padding: 5px;
+	margin-bottom: 5px;
+	box-shadow: 0 3px 5px #ccc;
+	border: 1px solid #ccc;
+}
+
+input[type="submit"] {
+	margin-top: 5px;
+	width: 100px;
+	background: #7D26CD;
+	color: white;
+	border-radius: 25px;
+	border: 0;
+}
+
+.shadow{
+	box-shadow: 0 3px 10px #333;
+}
+
+/* Posititoning Classes */
+
+	.col1_left {
+		float: left;
+		width: 231px;
+		margin: 0 0 20px;
+	}
+
+	.col1_mid {
+		float: left;
+		width: 231px;
+		margin: 0 1% 20px;
+	}	
+
+	.col1_right {
+		float: right;
+		width: 131px;
+		margin: 20px 10px 0 0;
+	}
+
+	.col2_left {
+		float: left;
+		width: 680px;
+		margin: 10px 0 20px 0px;
+	}
+
+	.col2_right {
+		float: right;
+		width: 660px;
+		margin: 0 0 20px 1%;
+	}
+
+	.col3 {
+		margin: 0 0 20px;
+	}
 /* APPLIED TO WHOLE BODY INSTEAD
 
 #weave {
