--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 /*fixes collapsing parents*/
-.clearfix: after{
+.clearfix:after {
 	content: ".";
 	display: block;
 	clear: both;
@@ -65,6 +65,7 @@ section {
 
 iframe {
 	display: block;
+	width: 100%;
 }	
 
 footer {
@@ -82,7 +83,7 @@ footer {
 
 .italics {
 	font-style: italic;
-	color: #51515;
+	color: #515151;
 	text-transform: uppercase;
 }
 
@@ -230,9 +231,11 @@ a:link, :visited {
 
 table {
 	width: 100%;
+	table-layout: fixed;
 	margin: 0 0 20px;
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
+
 }
 
 tr {
@@ -243,11 +246,13 @@ th, td {
 	padding: 10px;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
+	text-align: center;
 }
 
 th {
 	background: #555;
 	color: white;
+	text-align: center;
 }
 
 input, textarea {
@@ -262,7 +267,7 @@ input, textarea {
 input[type="submit"] {
 	margin-top: 5px;
 	width: 100px;
-	background: #7D26CD;
+	background: #8a3bd2;
 	color: white;
 	border-radius: 25px;
 	border: 0;
@@ -294,7 +299,7 @@ input[type="submit"] {
 
 	.col2_left {
 		float: left;
-		width: 680px;
+		width: 75%;
 		margin: 10px 0 20px 0px;
 	}
 
@@ -306,6 +311,7 @@ input[type="submit"] {
 
 	.col3 {
 		margin: 0 0 20px;
+		clear: both;
 	}
 /* APPLIED TO WHOLE BODY INSTEAD
 
